[package]
name = "btc-tx-decoder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to decode and visualize Bitcoin transactions"
license = "MIT"

[dependencies]
bitcoin = "0.32"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
prettytable-rs = "0.10"
