[package]
name = "bitcoin-tx-decoder"
version = "0.1.0"
edition = "2024"
authors = ["Oleg Kubrakov <oleg.kubrakov@proton.me>"]
description = "A CLI tool to decode and visualize Bitcoin transactions"
license = "MIT"

[dependencies]
bitcoin = "0.32"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
prettytable-rs = "0.10"
